# autogen-scavio

./: .gitignore  README.md  pyproject.toml
autogen_scavio/: __init__.py  _client.py
autogen_scavio/tools/: __init__.py  amazon.py  google.py  instagram.py  reddit.py  tiktok.py  walmart.py  youtube.py
tests/: conftest.py  test_amazon.py  test_google.py  test_reddit.py  test_tiktok.py  test_walmart.py  test_youtube.py
