[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-scavio"
version = "0.2.0"
description = "AutoGen integration for Scavio Search API -- real-time Google, Amazon, Walmart, YouTube, Reddit, TikTok, and Instagram search tools for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Scavio" }]
keywords = [
    "autogen",
    "ag2",
    "search",
    "ai",
    "agents",
    "web-search",
    "scavio",
    "amazon-search",
    "walmart-search",
    "youtube-search",
    "reddit-search",
    "tiktok-search",
    "instagram-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]

dependencies = [
    "scavio>=0.1.1",
    "autogen-core>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://scavio.dev?utm_source=autogen_integration"
Repository = "https://github.com/scavio-ai/autogen-scavio"
Documentation = "https://scavio.dev/docs/autogen?utm_source=autogen_integration"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
